--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 encoding: utf-8
 
 # SEO相关信息
-title: 謨 Blog
+title: 謨然Blog
 description: 謨-的个人博客
 keywords: 技术交流,Blog,易语言ava,Html,JavaScript,火山
-author: 謨
+author: 謨然
 footerText: 'Copyright © 2023 '
 
 # 这些不要动
