--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ extClickEffect: true
 extAdsense: false
 
 # 数学公式支持，比较影响加载速度,不需要请设置为false
-extMath: false
+extMath: true
 
 # 显示访问量统计，由不蒜子提供服务
 extCount: true
